<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.nmrfx</groupId>
    <artifactId>nmrfx</artifactId>
    <version>11.4.26-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>24</maven.compiler.source>
        <maven.compiler.target>24</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonar.organization>nanalysis</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.coverage.jacoco.xmlReportPaths>**/target/site/jacoco</sonar.coverage.jacoco.xmlReportPaths>
    </properties>

    <modules>
        <module>nmrfx-bom</module>
        <module>nmrfx-utils</module>
        <module>nmrfx-core</module>
        <module>nmrfx-plugin-api</module>
        <module>nmrfx-structure</module>
        <module>nmrfx-analyst</module>
        <module>nmrfx-analyst-gui</module>
        <module>nmrfx-jmx-connector</module>
    </modules>

    <repositories>
        <repository>
            <id>nanalysis-public</id>
            <url>https://raw.githubusercontent.com/nanalysis/maven-repository/public/</url>
        </repository>
        <repository>
            <id>tensorflow-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
            </plugin>
        </plugins>
    </build>
</project>
